# zoor

./: .gitignore  CMakeLists.txt  README.md
doc/: ChessNotation.md
doxy/: zoor.doxy
src/: CMakeLists.txt  basicboard.cc  basicboard.hh  basicstrategy.cc  basicstrategy.hh  basictypes.cc  basictypes.hh  bishopmove.hh  board.cc  board.hh  boardinfo.cc  boardinfo.hh  chesserror.hh  feninput.hh  fennotation.cc  fennotation.hh  fenrecord.hh  game.cc  game.hh  imove.cc  imove.hh  iofen.cc  iofen.hh  ipiecerating.hh  istrategy.hh  knightmove.hh  knightrating.hh  movepawn.hh  moves.hh  notation.cc  notation.hh  pawnmove.cc  pawnmove.hh  pawnrating.hh  piececode.cc  piececode.hh  piececount.cc  piececount.hh  piecemove.cc  piecemove.hh  (+11 more)
test/: CMakeLists.txt  README.md  makefile  runtest.py  tbasicboard.cc  tbasictypes.cc  tboard.cc  tboardinfo.cc  tfenrecord.cc  tiofen.cc  tpawnmove.cc  tpiececode.cc  tpiececount.cc  tpiecemove.cc  tpiecemoves.cc  tsquare.cc  tsquare.hh
test/fen/: blackGetBoards.fen  blackGetMovesRowCol.fen  blackOnCheckFromBishop.fen  blackOnCheckFromKing.fen  blackOnCheckFromKnight.fen  blackOnCheckFromPawn.fen  blackOnCheckFromQueen.fen  blackOnCheckFromRook.fen  canBlackCastle.fen  castling.fen  enPassantForBlack.fen  enPassantForWhite.fen  isBlackOnCheck.fen  isWhiteOnCheck.fen  makeMove.fen  moveBlackBishop.fen  moveBlackKing.fen  moveBlackKnight.fen  moveBlackPawn.fen  moveBlackQueen.fen  moveBlackRook.fen  moveWhiteBishop.fen  moveWhiteKing.fen  moveWhiteKnight.fen  moveWhitePawn.fen  moveWhiteQueen.fen  moveWhiteRook.fen  test1.fen  test2.fen  test3.fen  whiteGetBoards.fen  whiteGetMovesRowCol.fen  whiteOnCheckFromBishop.fen  whiteOnCheckFromKing.fen  whiteOnCheckFromKnight.fen  whiteOnCheckFromPawn.fen  whiteOnCheckFromQueen.fen  whiteOnCheckFromRook.fen
