add_library(zoor STATIC
    basicboard.cc
    basicboard.hh
    basictypes.cc
    basictypes.hh
    board.cc
    board.hh
    iofen.cc
    iofen.hh
    piececount.cc
    piececount.hh
    piecemove.cc
    piecemove.hh
    square.cc
    square.hh
    strategy.cc
    strategy.hh
    pawnmove.cc
    pawnmove.hh
)
